# MLToolkit

./: .gitignore  CMakeLists.txt  build.sh  main.cpp
GnuPlotWrapper/: CMakeLists.txt
GnuPlotWrapper/Interface/: gnuplot.h
Regression/Implementation/: Regression.cpp
Regression/Interface/: Regression.h
src/: CMakeLists.txt
src/Regression/: CMakeLists.txt
src/Regression/Interface/: Regression.h
src/Utility/: CMakeLists.txt
src/Utility/Implementation/: CommonTypes.cpp  Contour.cpp  Contour.h  CostFunction.cpp  GradientDescent.cpp  Plot.cpp
src/Utility/Interface/: CommonTypes.h  CostFunction.h  GradientDescent.h  LoadData.h  Plot.h
src/Utility/Test/: CMakeLists.txt  ContourTest.cpp  CostFunctionTest.cpp  GTestMain.cpp  GradientDescentTest.cpp  LinearInterpolation2DTest.cpp  PlotContourTest.cpp  PlotCostFunctionTest.cpp  PlotRegressionTest.cpp
